Tweaked <body> overflow CSS to prevent scrollbars

--- a/docs/css/table.css
+++ b/docs/css/table.css
@@ -3,7 +3,7 @@ body {
 	background-color: #444;
 	color: #fff;
 	font-family: 'Karla';
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 /* Disable text selection on everything since we'll be doing lots of dragging and dropping. */
